[package]
name = "astra_studio"
version = "26.7.16-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ASTRA-digital-art/ASTRA-Studio/"
description = "Open-source digital art and animation suite with 3D-inspired, non-destructive tools."
readme = "README.md"

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = "*"